--- a/_config.yml
+++ b/_config.yml
@@ -86,4 +86,4 @@ theme: "ed."
 # Plugins
 mathjax: true
 google_analytics_token: 'UA-137675817-1'
-disqus_short_name: 'hyunsik kim'
+disqus_short_name: 'hskimim-github-io'
